--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dhruv Agrawal App</title>
+    <link rel="icon" type="image/svg+xml" href="/da-favicon.svg" />
+    <title>Dhruv Agrawal App</title>
   </head>
   <body>
     <div id="root"></div>
